force-app/main/default/objects/openq__Activities_and_Objectives__c/openq__Activities_and_Objectives__c.object-meta.xml
<CustomObject>
    <label>Activities and Objectives</label>
    <nameField>
        <displayFormat>AO-{0000}</displayFormat>
        <label>Activities and Objects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities and Objectives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>