force-app/main/default/objects/openq__Activities_and_Objectives__c/fields/openq__Activity__c.field-meta.xml
<CustomField>
    <fullName>openq__Activity__c</fullName>
    <label>Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>