force-app/main/default/objects/openq__Activities_and_Objectives__c/fields/openq__Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>openq__Date_Completed__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>