force-app/main/default/objects/openq__Activities_and_Objectives__c/fields/openq__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>openq__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>