force-app/main/default/objects/openq__Activities_and_Objectives__c/fields/openq__Objective_New2__c.field-meta.xml
<CustomField>
    <fullName>openq__Objective_New2__c</fullName>
    <label>Objective New2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>KOL Collaboration</fullName>
            </value>
            <value>
                <fullName>Product Awareness</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>