force-app/main/default/objects/openq__Activities_and_Objectives__c/fields/openq__Objective_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>openq__Objective_Percent_Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Objective Percent Complete</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>