force-app/main/default/objects/openq__Activities_and_Objectives__c/fields/openq__Status__c.field-meta.xml
<CustomField>
    <fullName>openq__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In-progress</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>