force-app/main/default/objects/openq__Activities_and_Objectives__c/validationRules/openq__AO_Participant_must_have_Assigned_User.validationRule-meta.xml
<ValidationRule>
    <fullName>openq__AO_Participant_must_have_Assigned_User</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(openq__Participant__c != null,  openq__Assigned_To__c == null), true, false)</errorConditionFormula>
    <errorDisplayField>openq__Assigned_To__c</errorDisplayField>
    <errorMessage>You must assign a user to this plan task.</errorMessage>
</ValidationRule>