force-app/main/default/objects/openq__Activities_and_Objectives__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>openq__Activity_New__c</columns>
    <columns>openq__Objective_New__c</columns>
    <columns>openq__Engagement_Plan__c</columns>
    <columns>openq__Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>